turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:22: error: java.awt.Color does not take parameters
	setCouleurSol(colors(rule(state)(colors(cpt)(0))))
                                                    ^Turmite:25: error: type mismatch;
 found   : java.awt.Color
 required: Int
	rule(state)(colors(cpt))(1) match {
                          ^Turmite:34: error: type mismatch;
 found   : java.awt.Color
 required: Int
	state = rule(state)(colors(cpt))(2)
                                  ^